overflow fix for tablet css

--- a/styles/sass/tablet.scss
+++ b/styles/sass/tablet.scss
@@ -3,7 +3,7 @@
 
 
 body {
-    
+    overflow-x: hidden;
 
     #hero {
         min-height: 15*$leading;
